--- a/HardGraft-B2G1/products.html
+++ b/HardGraft-B2G1/products.html
@@ -8,7 +8,6 @@
 		<script src="https://use.typekit.net/cqu5zth.js"></script>
 		<script>try{Typekit.load({ async: true });}catch(e){}</script>
 		<link rel="stylesheet" href="main.css" />
-		<script src="https://use.fontawesome.com/c44dda93e0.js"></script>
 	</head>
 	<body>
 		<header class="container">
@@ -194,12 +193,12 @@
 				<div class="container__credit container" >
 				<small>&copy; <a href="http://wemakegood.design" target="_blank">WMGD</a> 2016</small>
 
-				<div class="social_links">
+				<div class="social_links cf">
 
-					<a href="https://www.facebook.com/profile.php?id=100001909747306&fref=ts"><i class="fa fa-facebook-square fa-2" aria-hidden="true"></i></a>
-					<a href="https://twitter.com/hardgraft?lang=fr"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-					<a href="https://www.instagram.com/hardgraft/?hl=fr"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-					<a href="https://fr.pinterest.com/hardgraft/"><i class="fa fa-pinterest-square" aria-hidden="true"></i></a>
+					<a href="https://www.facebook.com/profile.php?id=100001909747306&fref=ts"><img src="img/facebook.png" alt="icône"></a>
+					<a href="https://twitter.com/hardgraft?lang=fr"><img src="img/twitter.png" alt="icône"></a>
+					<a href="https://www.instagram.com/hardgraft/?hl=fr"><img src="img/instagram.png" alt="icône"></a>
+					<a href="https://fr.pinterest.com/hardgraft/"><img src="img/pinterest.png" alt="icône"></a>
 
 				</div> <!-- end-social_links -->
 
